# NEW

./: .env  .gitignore  .replit  DEPLOY_TO_RENDER.md  GIT_INSTRUCTIONS.md  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  test_manual.sh  tsconfig.json
.idx/: dev.nix
app/: analyzers.py  db.py  main.py  models.py  train.py
attached_assets/: Pasted--SYSTEM-INSTRUCTION-You-are-an-autonomous-developer-assistant-The-user-s-repo-is-the-exact-proje-1759651241144_1759651241146.txt  Pasted-Build-a-full-stack-cybersecurity-project-for-India-named-INSAFE-Indian-Scam-Awareness-Fraud-Elimi-1748467058396.txt
client/: index.html
client/src/: App.tsx
client/src/components/: navbar.tsx  report-form.tsx
client/src/components/scan-tools/: apk-scanner.tsx  call-scanner.tsx  qr-scanner.tsx  result-card.tsx  sms-scanner.tsx  url-scanner.tsx
client/src/lib/: indian-scam-patterns.ts  scam-detector.ts
client/src/pages/: ai-learning.tsx  analytics.tsx  home.tsx  learn.tsx  mobile-app.tsx  report.tsx  scan.tsx  threat-intelligence.tsx
ml-service/: main.py
server/: ai-pattern-learning.ts  db-storage.ts  db.ts  index.ts  ml-service.ts  official-data-sources.ts  routes.ts  scam-detector.ts  smart-report-system.ts  storage.ts  threat-intelligence.ts
shared/: schema.ts
tests/: test_phone_analyzer.py
